--- a/first/templates/first/signup.html
+++ b/first/templates/first/signup.html
@@ -1,8 +1,62 @@
 {% extends 'first/index.html' %}
 
 {% block style %}
+<style>
+    #body-containerX {
+        background-color: white;
+        margin-top: 5%;
+        margin-left: 20%;
+        margin-right: 20%;
+        border-radius: 10px;
+        padding: 5px;
+    }
+    
+    #body-containerX-head {
+        text-align: center;
+        font-family: cursive;
+        background-color: black;
+        color: white;
+        border-radius: 10px;
+    }
+    
+    #body-containerX-head h1 {
+        padding: 5px;
+    }
+    
+    #body-containerX-body {
+        text-align: center;
+    }
+    
+    #body-containerX-body input {
+        height: 30px;
+        width: 50%;
+    }
+</style>
 {% endblock %}
 
 {% block content %}
-<h1>SignUp</h1>
+<div id="body-containerX">
+    <div id="body-containerX-head">
+        <h1>SignUp</h1>
+    </div>
+    <hr>
+    <div id="body-containerX-body">
+        <form method="post" action="{% url 'signup' %}">
+            {% csrf_token %}
+            <input type="text" name="name" placeholder="name">
+            <br>
+            <br>
+            <input type="text" name="email" placeholder="email">
+            <br>
+            <br>
+            <input type="password" name="password" placeholder="password">
+            <br>
+            <br>
+            <input type="password" name="re-password" placeholder="re-enter password">
+            <hr>
+            <button class="btn btn-dark">SignUp</button>
+            <p>Already having an account?<a href="{% url 'login' %}">Login</a></p>
+        </form>
+    </div>
+</div>
 {% endblock %}
