Added message in the signup.html

--- a/first/templates/beforelogin/signup.html
+++ b/first/templates/beforelogin/signup.html
@@ -55,4 +55,8 @@
         </form>
     </div>
 </div>
-{% endblock %}
+{% if message %}
+<script>
+    alert("{{message}}")
+</script>
+{% endif %} {% endblock %}
