--- a/first/templates/beforelogin/login.html
+++ b/first/templates/beforelogin/login.html
@@ -49,4 +49,8 @@
         </form>
     </div>
 </div>
-{% endblock %}
+{% if message %}
+<script>
+    alert("{{message}}" + "\nTry again")
+</script>
+{% endif %} {% endblock %}
