created database and admin view

--- a/first/templates/beforelogin/login.html
+++ b/first/templates/beforelogin/login.html
@@ -51,6 +51,6 @@
 </div>
 {% if message %}
 <script>
-    alert("{{message}}" + "\nTry again")
+    alert("{{message}}")
 </script>
 {% endif %} {% endblock %}
