--- a/first/templates/afterlogin/home.html
+++ b/first/templates/afterlogin/home.html
@@ -1,14 +1,55 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hello</title>
+    <title>Let's blog</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        .heading {
+            background-color: black;
+            color: white;
+            display: flex;
+            justify-content: space-between;
+        }
+        
+        * {
+            margin: 0;
+        }
+        
+        #buttons-nav button {
+            font-family: cursive;
+            color: darkcyan;
+            border-radius: 10px;
+            padding: 7px;
+        }
+        
+        #buttons-nav {
+            padding: 5px;
+        }
+        
+        #logo-nav {
+            color: white;
+            font-family: fantasy;
+            padding-left: 10px;
+            padding-top: 3px;
+        }
+    </style>
 </head>
 
 <body>
-    welcome
+    <div class="heading">
+        <div id="logo-nav">
+            <a href="{% url 'index' %}"><img src="{% static 'images/Blog.png' %}"></a>
+        </div>
+        <div id="buttons-nav">
+            <a href="{% url 'signup' %}"><button>SignUp</button></a>
+            <a href="{% url 'login' %}"><button>LogIn</button></a>
+            <a href="#"><button>About Us</button></a>
+        </div>
+    </div>
 </body>
 
 </html>
