--- a/first/templates/afterlogin/home.html
+++ b/first/templates/afterlogin/home.html
@@ -36,6 +36,39 @@
             padding-left: 10px;
             padding-top: 3px;
         }
+        
+        .main-container {
+            display: flex;
+        }
+        
+        .left-container {
+            background-color: cadetblue;
+            position: fixed;
+            height: 100%;
+            width: 20%;
+            padding-top: 1%;
+        }
+        
+        .left-container a:link {
+            color: black;
+            background-color: cadetblue;
+            width: 100%;
+            border-radius: 10px;
+            padding: 10px 20px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+        }
+        
+        .left-container a:hover {
+            background-color: black;
+            color: white;
+        }
+        
+        .right-container {
+            margin-left: 20%;
+            width: 80%;
+        }
     </style>
 </head>
 
@@ -45,9 +78,19 @@
             <a href="{% url 'index' %}"><img src="{% static 'images/Blog.png' %}"></a>
         </div>
         <div id="buttons-nav">
-            <a href="{% url 'signup' %}"><button>SignUp</button></a>
-            <a href="{% url 'login' %}"><button>LogIn</button></a>
-            <a href="#"><button>About Us</button></a>
+            <a href="#"><button>Logout</button></a>
+        </div>
+    </div>
+    <div class="main-container">
+        <div class="left-container">
+            <a href="#">👨🏻‍💼Profile</a>
+            <a href="#">🏠︎ Home</a>
+            <a href="#">👫 Friends</a>
+            <a href="#">🌐 Communities</a>
+            <a href="#">👩🏻‍💻 About Us</a>
+        </div>
+        <div class="right-container">
+            <div>hello</div>
         </div>
     </div>
 </body>
