--- a/first/templates/afterlogin/base1.html
+++ b/first/templates/afterlogin/base1.html
@@ -9,6 +9,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
         .heading {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            z-index: 1000;
             background-color: black;
             color: white;
             display: flex;
@@ -38,6 +42,7 @@
         }
         
         .main-container {
+            margin-top: 50px;
             display: flex;
         }
         
@@ -70,6 +75,7 @@
             width: 80%;
         }
     </style>
+    {% block style %} {% endblock %}
 </head>
 
 <body>
@@ -83,14 +89,15 @@
     </div>
     <div class="main-container">
         <div class="left-container">
-            <a href="#">👨🏻‍💼Profile</a>
-            <a href="#">🏠︎ Home</a>
+            <a href="#">👨🏻‍💼 Profile</a>
+            <a href="{% url 'feed' %}">🏠︎ Home</a>
+            <a href="{% url 'add' %}">💬 Post</a>
             <a href="#">👫 Friends</a>
             <a href="#">🌐 Communities</a>
             <a href="#">👩🏻‍💻 About Us</a>
         </div>
         <div class="right-container">
-            <div>hello</div>
+            {% block content %} {% endblock %}
         </div>
     </div>
 </body>
