Added new model Person, added new html file details.html, created the profile.html, changed some views.py functions and added some new, updated urls.py, updated admin.py file, new entry in database

--- a/first/templates/afterlogin/base1.html
+++ b/first/templates/afterlogin/base1.html
@@ -89,7 +89,7 @@
     </div>
     <div class="main-container">
         <div class="left-container">
-            <a href="#">👨🏻‍💼 Profile</a>
+            <a href="{% url 'profile' %}">👨🏻‍💼 Profile</a>
             <a href="{% url 'feed' %}">🏠︎ Home</a>
             <a href="{% url 'add' %}">💬 Post</a>
             <a href="#">👫 Friends</a>
