--- a/first/templates/beforelogin/signup.html
+++ b/first/templates/beforelogin/signup.html
@@ -42,6 +42,9 @@
             <input type="text" name="username" placeholder="UserName">
             <br>
             <br>
+            <input type="text" name="name" placeholder="Name">
+            <br>
+            <br>
             <input type="text" name="email" placeholder="Email">
             <br>
             <br>
