--- a/first/templates/afterlogin/add.html
+++ b/first/templates/afterlogin/add.html
@@ -12,7 +12,7 @@
         margin-top: 5%;
         margin-left: 15%;
         margin-right: 15%;
-        background-color: cadetblue;
+        background-color: orange;
     }
     
     #form-post h4 {
