updated the base.html, base1.html, and added about.html

--- a/first/templates/afterlogin/base1.html
+++ b/first/templates/afterlogin/base1.html
@@ -93,7 +93,7 @@
             <a href="{% url 'add' %}">💬 Post</a>
             <a href="#">👫 Friends</a>
             <a href="#">🌐 Communities</a>
-            <a href="#">👩🏻‍💻 About Us</a>
+            <a href="{% url 'about' %}">👩🏻‍💻 About Us</a>
         </div>
         <div class="right-container">
             {% block content %} {% endblock %}
