Updatating everything just to check nothing is left

--- a/first/templates/afterlogin/profile.html
+++ b/first/templates/afterlogin/profile.html
@@ -73,7 +73,7 @@
         <div class="first-column-two">
             <div>
                 <b>Website</b>
-                <p>{{person.website}}</p>
+                <a href="{{person.website}}"><p>{{person.website}}</p></a>
             </div>
             <div>
                 <b>github</b>
@@ -81,15 +81,15 @@
             </div>
             <div>
                 <b>LinkedIn</b>
-                <p>{{person.linkedin}}</p>
+                <a href="{{person.linkedin}}"><p>{{person.linkedin}}</p></a>
             </div>
             <div>
                 <b>Instagram</b>
-                <p>{{person.instagram}}</p>
+                <a href="{{person.instagram}}"><p>{{person.instagram}}</p></a>
             </div>
             <div>
                 <b>Twitter</b>
-                <a><p>{{person.twiiter}}</p></a>
+                <a href="{{person.twiiter}}"><p>{{person.twiiter}}</p></a>
             </div>
         </div>
     </div>
