I changed a model Blog added time, created some new templates, added the find friends feature, could view the friends card(details), added some views regarding that, and updated the urls, fixed the image problem in editing user details part.

--- a/first/templates/afterlogin/base1.html
+++ b/first/templates/afterlogin/base1.html
@@ -89,9 +89,10 @@
     <div class="main-container">
         <div class="left-container">
             <a href="{% url 'profile' %}">👨🏻‍💼 Profile</a>
-            <a href="{% url 'feed' %}">🏠︎ Home/Feed</a>
-            <a href="{% url 'add' %}">💬 Post</a>
-            <a href="#">👫 Friends</a>
+            <a href="{% url 'myposts' %}">💬 My Posts</a>
+            <a href="{% url 'feed' %}">🏠︎ Home</a>
+            <a href="{% url 'add' %}">💬 New Post</a>
+            <a href="{% url 'find' %}">👫 Friends</a>
             <a href="#">🌐 Communities</a>
             <a href="{% url 'about' %}">👩🏻‍💻 About Us</a>
         </div>
