--- a/first/templates/afterlogin/people.html
+++ b/first/templates/afterlogin/people.html
@@ -41,7 +41,6 @@
     }
     
     .second-column {
-        background-color: white;
         padding: 5px;
         width: 60%;
         border: 1px solid cadetblue;
@@ -60,10 +59,18 @@
     #button-edit {
         text-align: center;
     }
+    #first1 {
+        text-align: center;
+        color: darkcyan;
+    }
 </style>
 {% endblock %} {% block content %}
+<div id="first1">
+    <h1>Searched for {{person.uname}}</h1>
+</div>
 
 <div class="main1">
+    
     <div class="first-column">
         <div class="first-column-one">
             <img src="{{person.image.url}}">
@@ -120,9 +127,5 @@
         </div>
         <br>
     </div>
-</div>
-<div id="button-edit">
-    <a href="{% url 'details' %}"><button class="btn btn-dark">Edit Your Details</button></a>
-    <br><br>
-</div>
+</div>    
 {% endblock %}
