--- a/first/templates/afterlogin/profile.html
+++ b/first/templates/afterlogin/profile.html
@@ -118,6 +118,10 @@
             <label><b>College:</b></label>
             <p>{{person.college}}</p>
         </div>
+        <div>
+            <label><b>Community:</b></label>
+            <p>{{person.community}}</p>
+        </div>
         <br>
     </div>
 </div>
