Lost track of how many changes i did to be honest!

--- a/first/templates/afterlogin/base1.html
+++ b/first/templates/afterlogin/base1.html
@@ -93,7 +93,7 @@
             <a href="{% url 'feed' %}">🏠︎ Home</a>
             <a href="{% url 'add' %}">💬 New Post</a>
             <a href="{% url 'find' %}">👫 Friends</a>
-            <a href="{% url 'community' %}">🌐 Communities</a>
+            <a href="{% url 'community' %}">🌐 Following</a>
             <a href="{% url 'about' %}">👩🏻‍💻 About Us</a>
         </div>
         <div class="right-container">
