--- a/first/templates/afterlogin/myposts.html
+++ b/first/templates/afterlogin/myposts.html
@@ -10,18 +10,18 @@
         text-align: center;
         color: cadetblue;
     }
+    
     #main-card-container h6 {
         color: cadetblue;
     }
 </style>
 {% endblock %} {% block content %}
-<h1>What all I Postsed</h1>
+<h1>My Posts</h1>
 <div id="main-card-container">
     {% for b in blog %}
-        <h6>{{b.uname}}</h6>
-        <p><i>{{b.post}}</i></p>
-        <p>{{b.time}}</p>
-        <hr>
-    {% endfor %}
+    <h6>{{b.uname}}</h6>
+    <p><i>{{b.post}}</i></p>
+    <p>{{b.time}}</p>
+    <hr> {% endfor %}
 </div>
 {% endblock %}
