--- a/first/templates/afterlogin/people.html
+++ b/first/templates/afterlogin/people.html
@@ -21,6 +21,11 @@
         border: 1px solid gray;
     }
     
+    .first-column-one div {
+        display: flex;
+        justify-content: space-evenly;
+    }
+
     .first-column-one img {
         width: 200px;
         height: 200px;
@@ -77,12 +82,23 @@
             <img src="{{person.image.url}}">
             <h4>{{person.name}}</h4>
 
-            <form method="post" action="{% url 'follow' %}">
-                {% csrf_token %}
-                <input type="hidden" value="{{person.uname}}" name="person_to_follow">
-                <button class="btn btn-dark">Follow</button>
-            </form>
-
+                {% if follower %}
+                <form method="post" action="{% url 'unfollow' %}">
+                    {% csrf_token %}
+                    <input type="hidden" value="{{person.uname}}" name="person_to_follow">
+                    <p>Following : {{ following }}</p>        
+                    <button class="btn btn-dark">UnFollow</button>
+                </form>
+                    
+                {% else %}
+                <form method="post" action="{% url 'follow' %}">
+                    {% csrf_token %}
+                    <input type="hidden" value="{{person.uname}}" name="person_to_follow">    
+                    <p>Following : {{ following }}</p>
+                    <button class="btn btn-dark">Follow</button>
+                </form>
+                {% endif %}
+                
         </div>
         <div class="first-column-two">
             <div>
